--- a/config/isucari01.conf
+++ b/config/isucari01.conf
@@ -1,5 +1,10 @@
+upstream app {
+    proxy_pass 127.0.0.1:8000;
+    proxy_pass 172.31.5.160:80;
+}
+
 server {
-    listen 443 ssl;
+    listen 80;
     server_name isucon9.catatsuy.org;
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
@@ -7,6 +12,6 @@ server {
 
     location / {
         proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://app;
     }
 }
