--- a/config/isucari01.conf
+++ b/config/isucari01.conf
@@ -1,6 +1,6 @@
 upstream app {
-    proxy_pass 127.0.0.1:8000;
-    proxy_pass 172.31.5.160:80;
+    server 127.0.0.1:8000;
+    server 172.31.5.160:80;
 }
 
 server {
