--- a/config/isucari02.conf
+++ b/config/isucari02.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80 ssl;
+    listen 80;
     server_name isucon9.catatsuy.org;
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
