--- a/config/isucari01.conf
+++ b/config/isucari01.conf
@@ -10,6 +10,16 @@ server {
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
+    location /upload/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://127.0.0.1:8000;
+    }
+
+    location /sell/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://127.0.0.1:8000;
+    }
+
     location / {
         proxy_set_header Host $http_host;
         proxy_pass http://app;
