--- a/config/isucari03.conf
+++ b/config/isucari03.conf
@@ -5,8 +5,44 @@ server {
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-    location / {
-        proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:8000;
+    # payment
+    location /card {
+        proxy_set_header True-Client-IP $remote_addr;
+        http://localhost:5555;
     }
+
+    location /token {
+        proxy_set_header True-Client-IP $remote_addr;
+        http://localhost:5555;
+    }
+
+    # shipment
+    location /create {
+        proxy_set_header Host $http_host;
+        proxy_set_header True-Client-IP $remote_addr;
+        http://localhost:7000;
+    }
+
+    location /request {
+        proxy_set_header Host $http_host;
+        proxy_set_header True-Client-IP $remote_addr;
+        http://localhost:7000;
+    }
+
+    location /accept {
+        proxy_set_header Host $http_host;
+        proxy_set_header True-Client-IP $remote_addr;
+        http://localhost:7000;
+    }
+
+    location /status {
+        proxy_set_header Host $http_host;
+        proxy_set_header True-Client-IP $remote_addr;
+        http://localhost:7000;
+    }
+
+    # location / {
+    #     proxy_set_header Host $http_host;
+    #     proxy_pass http://127.0.0.1:8000;
+    # }
 }
