--- a/config/isucari03.conf
+++ b/config/isucari03.conf
@@ -8,37 +8,37 @@ server {
     # payment
     location /card {
         proxy_set_header True-Client-IP $remote_addr;
-        http://localhost:5555;
+        proxy_pass http://localhost:5555;
     }
 
     location /token {
         proxy_set_header True-Client-IP $remote_addr;
-        http://localhost:5555;
+        proxy_pass http://localhost:5555;
     }
 
     # shipment
     location /create {
         proxy_set_header Host $http_host;
         proxy_set_header True-Client-IP $remote_addr;
-        http://localhost:7000;
+        proxy_pass http://localhost:7000;
     }
 
     location /request {
         proxy_set_header Host $http_host;
         proxy_set_header True-Client-IP $remote_addr;
-        http://localhost:7000;
+        proxy_pass http://localhost:7000;
     }
 
     location /accept {
         proxy_set_header Host $http_host;
         proxy_set_header True-Client-IP $remote_addr;
-        http://localhost:7000;
+        proxy_pass http://localhost:7000;
     }
 
     location /status {
         proxy_set_header Host $http_host;
         proxy_set_header True-Client-IP $remote_addr;
-        http://localhost:7000;
+        proxy_pass http://localhost:7000;
     }
 
     # location / {
