--- a/config/isucari03.conf
+++ b/config/isucari03.conf
@@ -1,48 +1,12 @@
 server {
-    listen 80 ssl;
+    listen 80;
     server_name isucon9.catatsuy.org;
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-    # payment
-    location /card {
-        proxy_set_header True-Client-IP $remote_addr;
-        proxy_pass http://localhost:5555;
-    }
-
-    location /token {
-        proxy_set_header True-Client-IP $remote_addr;
-        proxy_pass http://localhost:5555;
-    }
-
-    # shipment
-    location /create {
+    location / {
         proxy_set_header Host $http_host;
-        proxy_set_header True-Client-IP $remote_addr;
-        proxy_pass http://localhost:7000;
+        proxy_pass http://127.0.0.1:8000;
     }
-
-    location /request {
-        proxy_set_header Host $http_host;
-        proxy_set_header True-Client-IP $remote_addr;
-        proxy_pass http://localhost:7000;
-    }
-
-    location /accept {
-        proxy_set_header Host $http_host;
-        proxy_set_header True-Client-IP $remote_addr;
-        proxy_pass http://localhost:7000;
-    }
-
-    location /status {
-        proxy_set_header Host $http_host;
-        proxy_set_header True-Client-IP $remote_addr;
-        proxy_pass http://localhost:7000;
-    }
-
-    # location / {
-    #     proxy_set_header Host $http_host;
-    #     proxy_pass http://127.0.0.1:8000;
-    # }
 }
