--- a/config/isucari01.conf
+++ b/config/isucari01.conf
@@ -11,12 +11,12 @@ server {
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-    location /upload/ {
+    location /upload {
         proxy_set_header Host $http_host;
         proxy_pass http://127.0.0.1:8000;
     }
 
-    location /sell/ {
+    location /sell {
         proxy_set_header Host $http_host;
         proxy_pass http://127.0.0.1:8000;
     }
