--- a/config/isucari01.conf
+++ b/config/isucari01.conf
@@ -1,7 +1,7 @@
 upstream app {
-    server 127.0.0.1:8000;
-    server 172.31.5.160:80;
-    server 172.31.12.242:80;
+    server 127.0.0.1:8000 weight=5;
+    server 172.31.5.160:80 weight=5;
+    server 172.31.12.242:80 weight=3;
 }
 
 server {
