--- a/config/isucari01.conf
+++ b/config/isucari01.conf
@@ -1,5 +1,5 @@
 upstream app {
-    server 127.0.0.1:8000 weight=5;
+    # server 127.0.0.1:8000 weight=5;
     server 172.31.5.160:80 weight=5;
     server 172.31.12.242:80 weight=3;
 }
@@ -10,6 +10,11 @@ server {
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+    location /login {
+        proxy_set_header Host $http_host;
+        proxy_pass http://127.0.0.1:8000;
+    }
 
     location /upload {
         proxy_set_header Host $http_host;
