--- a/config/isucari01.conf
+++ b/config/isucari01.conf
@@ -1,7 +1,12 @@
 upstream app {
-    # server 127.0.0.1:8000 weight=5;
-    server 172.31.5.160:80 weight=5;
-    server 172.31.12.242:80 weight=3;
+    server 127.0.0.1:8000;
+    # server 172.31.5.160:80 weight=5;
+    # server 172.31.5.160:80;
+    # server 172.31.12.242:80 weight=1;
+}
+
+upstream login {
+    server 172.31.5.160:80;
 }
 
 server {
@@ -13,17 +18,12 @@ server {
 
     location /login {
         proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://login;
     }
 
     location /upload {
         proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:8000;
-    }
-
-    location /sell {
-        proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://172.31.12.242;
     }
 
     location / {
