--- a/config/isucari03.conf
+++ b/config/isucari03.conf
@@ -5,8 +5,8 @@ server {
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-    location / {
-        proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:8000;
+    location /upload {
+        expires 24h;
+        root /home/isucon/isucari/webapp/public/;
     }
 }
