--- a/config/isucari01.conf
+++ b/config/isucari01.conf
@@ -1,8 +1,5 @@
 upstream app {
     server 127.0.0.1:8000;
-    # server 172.31.5.160:80 weight=5;
-    # server 172.31.5.160:80;
-    # server 172.31.12.242:80 weight=1;
 }
 
 upstream login {
@@ -22,8 +19,8 @@ server {
     }
 
     location /upload {
-        proxy_set_header Host $http_host;
-        proxy_pass http://172.31.12.242;
+        expires 24h;
+        root /home/isucon/isucari/webapp/public;
     }
 
     location / {
